--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,3 +1,3 @@
-env=jenkins
-localReportPath = /screenshots/
+env=local
+localReportPath = C:\\Users\\vinayak\\Downloads\\Selenium\\HybridFramework\\inetBankingV1\\screenshots\\
 remoteReportPath = /job/inetBankingV1_gitHub/ws/screenshots/
