--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,3 +1,3 @@
-env=local
+env=remote
 localReportPath = C:\\Users\\vinayak\\Downloads\\Selenium\\HybridFramework\\inetBankingV1\\screenshots\\
 remoteReportPath = /job/inetBankingV1_gitHub/ws/screenshots/
