--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,3 +1,3 @@
 env=remote
 localReportPath = C:\\Users\\vinayak\\Downloads\\Selenium\\HybridFramework\\inetBankingV1\\screenshots\\
-remoteReportPath = http://localhost:8080/job/inetBankingV1_gitHub/ws/screenshots/
+remoteReportPath = C:\Users\vinayak\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
