This is updated

--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,3 +1,4 @@
-env=remote
+env=remoteExe
 localReportPath = C:\\Users\\vinayak\\Downloads\\Selenium\\HybridFramework\\inetBankingV1\\screenshots\\
-remoteReportPath = C:\Users\vinayak\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
+remoteWarReportPath = C:\Users\vinayak\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
+remoteExeReportPath = C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
