--- a/resources/test.properties
+++ b/resources/test.properties
@@ -1,4 +1,4 @@
-env=remoteExe
+env=remoteWar
 localReportPath = C:\\Users\\vinayak\\Downloads\\Selenium\\HybridFramework\\inetBankingV1\\screenshots\\
 remoteWarReportPath = C:\Users\vinayak\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
 remoteExeReportPath = C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\inetBankingV1_gitHub\screenshots\
